# BookGenerator

./: .gitignore  README.md  pyproject.toml
book_generator/: main.py
book_generator/containers/: book_generator_container.py
book_generator/data_model/: book.py  element.py  page.py  photo.py  spread.py  template.py
book_generator/generator/: book.py  element.py  photo.py  spread.py  template.py  utils.py
book_generator/services/: book_service.py
book_generator/templates/double_page_templates/: two_page_photo_template.py
book_generator/templates/single_page_templates/: empty_template.py  four_photos_template.py  one_photo_template.py  three_photos_split.py
book_generator/utils/: asyncio_thread.py  filewatcher.py
book_generator/web/: __init__.py  index.py  web.py  websocket.py
book_generator/web/templates/: book.html
example_books/: london.py
static/: styles.css
