[tool.poetry]
name = "book_generator"
version = "0.1.0"
description = ""
authors = ["Peter Fortuin <peter.fortuin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pillow = "^10.4.0"

[tool.poetry.scripts]
book-generator = "book_generator.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"