[tool.poetry]
name = "book_generator"
version = "0.1.0"
description = ""
authors = ["Peter Fortuin <peter.fortuin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.32.0"
pillow = "^10.4.0"
jinja2 = "^3.1.4"
dependency-injector = "4.42.0b1"
watchdog = "^5.0.2"
websockets = "^13.0"

[tool.poetry.scripts]
book-generator = "book_generator.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"